# OAuth-API

./: .env.example  Cargo.toml  README.md  startup.sh
src/: main.rs  routes.rs  types.rs  utils.rs
src/routes/: code.rs  status.rs  token.rs
src/types/: code.rs  status.rs  token.rs
src/utils/: env.rs  request.rs
