[package]
name = "oauth"
version = "0.1.0"
authors = ["Arthurdw <mail@arthurdw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
serde_json = "1.0.60"
serde = "1.0.118"
redis = "0.18.0"
rand = "0.8.0"
