[package]
name = "oauth"
version = "0.1.0"
authors = ["Arthurdw <mail@arthurdw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
serde = "1.0.124"
serde_json = "1.0.63"
redis = "0.20.0"
rand = "0.8.3"
uuid = "0.8.2"
postgres = { version = "0.19.0", features = ["with-uuid-0_8"] }
dotenv = "0.15.0"
